overflow fix

--- a/src/Pages/StyleRoot.scss
+++ b/src/Pages/StyleRoot.scss
@@ -61,7 +61,7 @@ ul {
 .Page_Body {
     position: relative;
     margin: 0px auto;
-    padding: 10% 0 20% 0;
+    padding: 10% 0 30% 0;
     border: 5px solid $outline-color;
     border-image-slice: 1;
     border-top: 0;
